syntax = "proto3";

package greet;


option go_package = "uditsharma.com/grpc-go-module/greet/proto";

message PrimeFactorRequest{
uint64 number =1;
}


message PrimeFactorResponse{
uint64 primeFactor =1;
}


service PrimeFactorService{
    rpc GetPrimeFactors(PrimeFactorRequest) returns (stream PrimeFactorResponse);
}